--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   go_router: ^14.2.1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   integration_test:
