--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   go_router: ^14.2.1
   url_launcher: ^6.3.0
+  dio: ^5.5.0+1
 
 dev_dependencies:
   integration_test:
