--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  google_fonts: ^6.2.1
   html: ^0.15.4
   plugin_platform_interface: ^2.0.2
 
