--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
   html: ^0.15.4
+  photo_view: ^0.15.0
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
