--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_inappwebview: ^6.0.0
   google_fonts: ^6.2.1
   html: ^0.15.4
   photo_view: ^0.15.0
