--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   go_router: ^14.2.1
   url_launcher: ^6.3.0
   dio: ^5.5.0+1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   integration_test:
