--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: html_to_flutter_example
-description: "Demonstrates how to use the html_to_flutter plugin."
+name: widgets_from_html_example
+description: "Demonstrates how to use the widgets_from_html plugin."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -19,9 +19,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  html_to_flutter:
+  widgets_from_html:
     # When depending on this package from a real application you should use:
-    #   html_to_flutter: ^x.y.z
+    #   widgets_from_html: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
