--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: widgets_from_html
-description: "A new Flutter plugin project."
+description: "A package to render HTML content as Flutter widgets. Supports all basic HTML tags."
 version: 0.0.1-dev.1
-homepage: https://example.com
+homepage: https://github.com/devaryakjha/html_parser
+issue_tracker: https://github.com/devaryakjha/html_parser/issues
 
 environment:
   sdk: '>=3.4.4 <4.0.0'
