--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   url_launcher: ^6.3.0
   dio: ^5.5.0+1
   google_fonts: ^6.2.1
+  photo_view: ^0.15.0
 
 dev_dependencies:
   integration_test:
