--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   dio: ^5.5.0+1
   google_fonts: ^6.2.1
   photo_view: ^0.15.0
+  flutter_inappwebview: ^6.0.0
 
 dev_dependencies:
   integration_test:
