--- a/packages/widgets_from_html_core/pubspec.yaml
+++ b/packages/widgets_from_html_core/pubspec.yaml
@@ -8,9 +8,11 @@ environment:
   flutter: '>=3.3.0'
 
 dependencies:
+  collection: ^1.18.0
   flutter:
     sdk: flutter
   html: ^0.15.4
+  meta: ^1.15.0
 
 dev_dependencies:
   flutter_test:
